# flashbook

./: .gitignore  ATTACKS.md  BENCHMARKS.md  Cargo.toml  DECISIONS.md  LICENSE  LIMITATIONS.md  README.md
.github/workflows/: ci.yml  pages.yml
apps/dashboard/: .gitignore  next.config.mjs  package-lock.json  package.json  tsconfig.json
apps/dashboard/app/: globals.css  layout.tsx  page.tsx
apps/dashboard/app/bench/: page.tsx
apps/dashboard/app/book/: page.tsx
apps/dashboard/app/ingest/: page.tsx
apps/dashboard/components/: BarGauge.tsx  DepthLadder.tsx  EmptyState.tsx  LineChart.tsx  Nav.tsx  StatCard.tsx
apps/dashboard/lib/: contract.mjs  data.ts  format.ts
apps/dashboard/public/data/: README.md  bench.json  books.json  lag.json  meta.json
apps/dashboard/scripts/: check.mjs
bench/: ci-smoke.sh  render.py  render.sh  run-all.sh
bench/results/: bus_fanout.json  e2e_live.json  e2e_net.json  e2e_rtt.json  feed_alloc.json  feed_parse.json  lob_replay.json  replay_verify_full.json  store_compare.json  store_pit.json  store_scan.json  store_write.json
crates/bench/: Cargo.toml
crates/bench/src/: compare.rs  lib.rs  loadgen.rs  percentile.rs  results.rs
crates/bench/tests/: store_bench.rs
crates/bus/: Cargo.toml
crates/bus/src/: lib.rs  ring.rs
crates/feed/: Cargo.toml
crates/feed/fixtures/binance/: live-btc-eth.ndjson  rest-depth-btc.json
crates/feed/fixtures/coinbase/: live-btc-eth.ndjson  rest-book-btc.json
crates/feed/fixtures/kraken/: assetpairs.json  live-btc-eth.ndjson  rest-depth-btc.json
crates/feed/src/: binance.rs  codec.rs  coinbase.rs  conn.rs  kraken.rs  lib.rs  scan.rs  sink.rs  stats.rs
crates/feed/tests/: binance.rs  capture_unit.rs  coinbase.rs  kraken.rs
crates/lob/: Cargo.toml
crates/lob/src/: book.rs  btree.rs  ladder.rs  lib.rs
crates/lob/tests/: model.rs
crates/proto/: Cargo.toml
crates/proto/src/: clock.rs  event.rs  fixed.rs  instrument.rs  kraken_crc.rs  lib.rs  rawlog.rs
crates/proto/tests/: prop.rs
crates/replay/: Cargo.toml
crates/replay/src/: lib.rs  run.rs  source.rs
crates/replay/tests/: crossval.rs
crates/store/: Cargo.toml
crates/store/src/: block.rs  lib.rs  pit.rs  segment.rs  varint.rs
crates/store/tests/: block_v2.rs  pit.rs  segment.proptest-regressions  segment.rs
crates/store/tests/fixtures/: v1-raw.fbstore  v1-zstd.fbstore
ops/: DONE.md  GOAL.md  LOG.md  STATE.md  gen-soak-report.py  soak-report.md  soak-status.sh  soak-watchdog.sh  start-soak.sh  stop-soak.sh
ops/soak/: smoke-stats.jsonl  stats.jsonl
tools/wsdump/: Cargo.toml
tools/wsdump/src/: main.rs
