[workspace]
resolver = "3"
members = [
    "crates/proto",
    "crates/feed",
    "crates/lob",
    "crates/store",
    "crates/bus",
    "crates/replay",
    "crates/bench",
    "tools/wsdump",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/davidvo-lyft/flashbook"

[workspace.dependencies]
flashbook-proto = { path = "crates/proto" }
flashbook-feed = { path = "crates/feed" }
flashbook-lob = { path = "crates/lob" }
flashbook-store = { path = "crates/store" }
flashbook-bus = { path = "crates/bus" }
flashbook-replay = { path = "crates/replay" }

anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
crc32fast = "1"
criterion = { version = "0.5", features = ["html_reports"] }
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
dhat = "0.3"
duckdb = { version = "1", features = ["bundled"] }
rusqlite = { version = "0.32", features = ["bundled"] }
futures-util = "0.3"
hdrhistogram = "7"
libc = "0.2"
memchr = "2"
memmap2 = "0.9"
proptest = "1"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
zstd = "0.13"

[profile.release]
lto = "thin"
codegen-units = 1
debug = true

[profile.bench]
inherits = "release"
