[package]
name = "flashbook-bus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crossbeam-channel = { workspace = true }
crossbeam-queue = { workspace = true }
crossbeam-utils = { workspace = true }
flashbook-proto = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
