[package]
name = "flashbook-proto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bytemuck = { workspace = true }
crc32fast = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
