[package]
name = "flashbook-replay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
crc32fast = { workspace = true }
flashbook-proto = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
