[package]
name = "flashbook-replay"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
crc32fast = { workspace = true }
flashbook-feed = { workspace = true }
flashbook-lob = { workspace = true }
flashbook-proto = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
