[package]
name = "flashbook-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
crc32fast = { workspace = true }
flashbook-proto = { workspace = true }
memmap2 = { workspace = true }
thiserror = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }
